--- a/build.xml
+++ b/build.xml
@@ -41,7 +41,7 @@
     <target name="junit" depends="tjar">
         <junit printsummary="yes">
         <classpath refid="classpath" />
-        <classpath location="test"/>
+        <classpath location="lib/junit.jar"/>
         <test name="hellotest" haltonfailure="no" todir="test/results">
         <formatter type="plain"/>
         <formatter type="xml"/>
