--- a/build.xml
+++ b/build.xml
@@ -4,6 +4,7 @@
     <path id="classpath">
         <pathelement location="${lib.dir}/ant-junit4.jar"/>
         <pathelement location="${lib.dir}/ant-junit"/>
+        <pathelement location="${lib.dir}/junit.jar"/>
     </path>
 
     <target name="clean">
