--- a/build.xml
+++ b/build.xml
@@ -3,7 +3,7 @@
     <property name="lib.dir" value="/usr/share/ant/lib" />
     <path id="classpath">
         <pathelement location="${lib.dir}/ant-junit4.jar"/>
-        <pathelement location="${lib.dir}/ant-junit"/>
+        <pathelement location="${lib.dir}/ant-junit.jar"/>
         <pathelement location="${lib.dir}/junit.jar"/>
     </path>
 
